correcao na distribuicao das páginas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Placar de truco</title>
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./dist/style/index.css">
 </head>
 <body>
     <main class="conteiner">
@@ -42,6 +42,6 @@
             </section>            
         </section>
     </main>
-    <script src="./js/index.js"></script>
+    <script src="./dist/js/index.js"></script>
 </body>
 </html>
